increase dna size

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="fa-solid fa-dna"></span>
+							<span class="fa-solid fa-dna fa-4x"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
