trying out svg+js

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<br><span class="fa-solid fa-dna fa-3x" data-fa-transform="down-5"></span>
+							<!-- <span class="fa-solid fa-dna fa-3x" data-fa-transform="down-5"></span> -->
+							
+							<!-- Define the symbols, these are invisible on the page -->
+  							<i data-fa-symbol="dna" class="fa-solid fa-dna fa-fw fa-3x"></i>
+							<!-- Use the defined symbols -->
+  							<svg><use xlink:href="#dna"></use></svg>
 						</div>
 						<div class="content">
 							<div class="inner">
