trying css approach

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<!-- <span class="fa-solid fa-dna fa-3x" data-fa-transform="down-5"></span> -->
 							
 							<!-- Define the symbols, these are invisible on the page -->
-  							<i data-fa-symbol="dna" class="fa-solid fa-dna fa-fw fa-3x" data-fa-transform="down-15"></i>
+  							<i data-fa-symbol="dna" class="fa-solid fa-dna fa-fw fa-3x" style="margin-top: 20px;"></i>
 							<!-- Use the defined symbols -->
   							<svg><use xlink:href="#dna"></use></svg>
 						</div>
