--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<!-- <span class="fa-solid fa-dna fa-3x" data-fa-transform="down-5"></span> -->
+							<!-- <span class="fa-solid fa-dna fa-3x" data-fa-transform="down-5"></span> style="margin-top: 25px;" -->
 							
 							<!-- Define the symbols, these are invisible on the page -->
-  							<i data-fa-symbol="dna" class="fa-solid fa-dna fa-fw fa-3x" style="margin-top: 25px;"></i>
+  							<i data-fa-symbol="dna" class="fa-solid fa-dna fa-fw fa-3x" data-fa-transform="down-100"></i>
 							<!-- Use the defined symbols -->
   							<svg><use xlink:href="#dna"></use></svg>
 						</div>
