trying line awesome

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script src="https://kit.fontawesome.com/5ede9bb9b7.js" crossorigin="anonymous"></script>
+		<!-- <script src="https://kit.fontawesome.com/5ede9bb9b7.js" crossorigin="anonymous"></script> -->
+		<link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css">
 	</head>
 	<body class="is-preload">
 
@@ -24,9 +25,11 @@
 							<!-- <span class="fa-solid fa-dna fa-3x" data-fa-transform="down-5"></span> style="margin-top: 25px;" -->
 							
 							<!-- Define the symbols, these are invisible on the page -->
-  							<i data-fa-symbol="dna" class="fa-solid fa-dna fa-fw fa-3x" style="margin-top: 20px;"></i>
+  							<!-- <i data-fa-symbol="dna" class="fa-solid fa-dna fa-fw fa-3x" style="margin-top: 20px;"></i> -->
 							<!-- Use the defined symbols -->
-  							<svg><use xlink:href="#dna"></use></svg>
+  							<!-- <svg><use xlink:href="#dna"></use></svg> -->
+							
+							<i class="las la-dna" data-fa-transform="down-5"></i>
 						</div>
 						<div class="content">
 							<div class="inner">
