switching shift to css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<!-- Use the defined symbols -->
   							<!-- <svg><use xlink:href="#dna"></use></svg> -->
 							
-							<i class="las la-dna" data-fa-transform="down-5"></i>
+							<i class="las la-dna" style="margin-top: 20px;"></i>
 						</div>
 						<div class="content">
 							<div class="inner">
