--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
-						Massively</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<h1>Trent A. Leslie</h1>
+						<p><b>Analytical and results-driven professional with over 10 years of data analytics experience and skilled at using statistical analysis and data visualization to uncover valuable insights and drive informed decision-making.</b></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
