added social media

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Trent A. Leslie</h1>
-						<p><b>Analytical and results-driven professional with over 10 years of data analytics experience and skilled at using statistical analysis and data visualization to uncover valuable insights and drive informed decision-making.</b></p>
+						<p><b>Data analytics professional with over a decade of experience, proficient in harnessing statistical techniques and visual representations to disclose valuable insights and empower informed decision-making.</b></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -34,15 +34,17 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li class="active"><a href="index.html">Portfolio</a></li>
+							<li><a href="generic.html">r&eacute;sum&eacute;</a></li>
+							<li><a href="elements.html">Contact</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/trentleslie" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.facebook.com/trentleslie/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/uncle_robot_stuff/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://genomic.social/@trent360" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
+							<li><a href="https://medium.com/@trentleslie" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+
 						</ul>
 					</nav>
 
