more social and contact form

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 							<li><a href="elements.html">Contact</a></li>
 						</ul>
 						<ul class="icons">
+							<li><a href="https://www.linkedin.com/in/trent-leslie/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/trentleslie" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.facebook.com/trentleslie/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/uncle_robot_stuff/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -163,7 +164,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
+							<form method="post" action="https://formspree.io/f/xbjepydo">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -191,11 +192,11 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">(253) 353-2593</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">My first + last name at Gmail.</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
