about me section and some pics

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title></title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,17 +34,19 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Portfolio</a></li>
-							<li><a href="generic.html">r&eacute;sum&eacute;</a></li>
-							<li><a href="elements.html">Contact</a></li>
+							<li><a href="about_me.html">About Me</a></li>
+							<li><a href="bioinformatics.html">Bioinformatics</a></li>
+							<li><a href="data_science.html">Data.Science</a></li>
+							<li><a href="resume.html">r&eacute;sum&eacute;</a></li>
+							<li><a href="contact.html">Contact</a></li>
+							<li><a href="sitemap.html">Sitemap</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/trent-leslie/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/trentleslie" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.facebook.com/trentleslie/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.instagram.com/uncle_robot_stuff/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://genomic.social/@trent360" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
 							<li><a href="https://medium.com/@trentleslie" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+							<li><a href="https://www.instagram.com/uncle_robot_stuff/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 
 						</ul>
 					</nav>
@@ -167,11 +169,11 @@
 							<form method="post" action="https://formspree.io/f/xbjepydo">
 								<div class="fields">
 									<div class="field">
-										<label for="name">Name</label>
+										<label for="name">Your Name</label>
 										<input type="text" name="name" id="name" />
 									</div>
 									<div class="field">
-										<label for="email">Email</label>
+										<label for="email">Your Email</label>
 										<input type="text" name="email" id="email" />
 									</div>
 									<div class="field">
@@ -186,34 +188,34 @@
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<h3>Location</h3>
+								<p><a href="https://goo.gl/maps/a1SJFuBMgYuEA8pK6" target="_blank">Port Orchard, Washington 98366</a></p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(253) 353-2593</a></p>
+								<p>(253) 353-2593</p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">My first + last name at Gmail.</a></p>
+								<p>[first name + last name] at Gmail</p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/trent-leslie/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/trentleslie" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://genomic.social/@trent360" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
+									<li><a href="https://medium.com/@trentleslie" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+									<li><a href="https://www.instagram.com/uncle_robot_stuff/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</section>
 						</section>
 					</footer>
-
+					
 				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+				<div id="copyright">
+					<ul><li>Trent A. Leslie</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+				</div>
 
 			</div>
 
