--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 						<ul class="links">
 							<li><a href="about_me.html">About Me</a></li>
 							<li><a href="bioinformatics.html">Bioinformatics</a></li>
-							<li><a href="data_science.html">Data.Science</a></li>
-							<li><a href="resume.html">r&eacute;sum&eacute;</a></li>
+							<li><a href="data_science.html">Data Science</a></li>
+							<li><a href="resume.html">Resume</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<li><a href="sitemap.html">Sitemap</a></li>
 						</ul>
