--- a/about_me.html
+++ b/about_me.html
@@ -11,6 +11,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+			figure {
+			  margin: 0;
+			  display: inline-block;
+			  text-align: center;
+			}
+		
+			figcaption {
+			  margin-top: -90px;
+			  display: block;
+			  font-style: italic;
+			}
+		  </style>
 	</head>
 	<body class="is-preload">
 
@@ -166,15 +179,24 @@
 									<h2>Personal Interests</h2>
 										<div class="box">
 											<p>
-												<span class="image left"><img src="images/gigharbor.jpg" alt="" /></span>Outside of his professional pursuits, Trent cherishes spending time with his wife, Sarah, as they explore the beauty of Western Washington. They both relish discovering new trails for hiking and immersing themselves in the splendor of the Puget Sound through boating adventures. Additionally, Trent and Sarah enjoy kayaking on inland lakes whenever they have the opportunity.
+												<span class="image left"><img src="images/gigharbor.jpg" alt="Gig Harbor, Washington, USA" /></span>
+												
+												Outside of his professional pursuits, Trent cherishes spending time with his wife, Sarah, as they explore the beauty of Western Washington. They both relish discovering new trails for hiking and immersing themselves in the splendor of the Puget Sound through boating adventures. Additionally, Trent and Sarah enjoy kayaking on inland lakes whenever they have the opportunity.
 											</p>
 											<p>
-												<span class="image right"><img src="images/owl.jpg" alt="" /></span>Trent is also passionate about learning how to operate his sailboat, continually tackling the challenges associated with mastering this skill. He has a keen interest in wildlife photography, striving to capture the essence of nature through his lens. In his downtime, Trent loves to unwind with a captivating sci-fi novel, delving into the imaginative worlds crafted by talented authors like Isaac Asimov and Dan Simmons.
+												<span class="image right"><img src="images/owl.jpg" alt="Long-eared Owl at Theler Wetlands in Belfair, Washington, USA" /></span>Trent is also passionate about learning how to operate his sailboat, continually tackling the challenges associated with mastering this skill. He has a keen interest in wildlife photography, striving to capture the essence of nature through his lens. In his downtime, Trent loves to unwind with a captivating sci-fi novel, delving into the imaginative worlds crafted by talented authors like Isaac Asimov and Dan Simmons.
 											</p>
 											<p>
 												In summary, Trent is a highly skilled and experienced professional with a diverse background in bioinformatics, data science, machine learning, and data analytics. With a strong foundation in both technical and leadership skills, Trent is well-equipped to tackle complex challenges and contribute to the success of any organization seeking a versatile and dedicated team member.
 											</p>
-											<span class="image fit"><img src="images/oystercatcher.JPG" alt="" /></span>
+											<figure>
+												<a class="image main">
+												<img src="images/oystercatcher.JPG" alt="Black Oystercatcher at Blakely Rock in Puget Sound, Washington, USA" />
+												</a>
+												<figcaption>
+												Gig Harbor, Long-eared Owl, and Black Oystercatcher Photos by <a href="https://www.instagram.com/uncle_robot_stuff/" target="_blank">Trent Leslie</a>.
+												</figcaption>
+											</figure>
 										</div>
 							</section>
 
