--- a/index.html
+++ b/index.html
@@ -11,206 +11,193 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+			figure {
+			  margin: 0;
+			  display: inline-block;
+			  text-align: center;
+			}
+		
+			figcaption {
+			  margin-top: -90px;
+			  display: block;
+			  font-style: italic;
+			}
+		  </style>
 	</head>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
 
-				<!-- Intro -->
-					<div id="intro">
-						<h1>Trent A. Leslie</h1>
-						<p><b>Data analytics professional with over a decade of experience, proficient in harnessing statistical techniques and visual representations to disclose valuable insights and empower informed decision-making.</b></p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
+			<!-- Intro -->
+				<div id="intro">
+					<h1>Trent A. Leslie</h1>
+					<p><b>Data analytics professional with over a decade of experience, proficient in harnessing statistical techniques and visual representations to disclose valuable insights and empower informed decision-making.</b></p>
+					<ul class="actions">
+						<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+					</ul>
+				</div>
 
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+			<!-- Header -->
+				<header id="header">
+					<a href="index.html" class="logo">Trent A. Leslie</a>
+				</header>
+
+			<!-- Nav -->
+				<nav id="nav">
+					<ul class="links">
+						<li><a href="about_me.html">About Me</a></li>
+						<li><a href="bioinformatics.html">Bioinformatics</a></li>
+						<li><a href="data_science.html">Data Science</a></li>
+						<li><a href="resume.html">Resume</a></li>
+						<li><a href="contact.html">Contact</a></li>
+						<li><a href="sitemap.html">Sitemap</a></li>
+					</ul>
+					<ul class="icons">
+						<li><a href="https://www.linkedin.com/in/trent-leslie/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/trentleslie" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://genomic.social/@trent360" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
+						<li><a href="https://medium.com/@trentleslie" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+						<li><a href="https://www.instagram.com/uncle_robot_stuff/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+
+					</ul>
+				</nav>
+
+			<!-- Main -->
+				<div id="main">
+
+					<header class="major">
+						<h1>Welcome</h1>
 					</header>
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li><a href="about_me.html">About Me</a></li>
-							<li><a href="bioinformatics.html">Bioinformatics</a></li>
-							<li><a href="data_science.html">Data Science</a></li>
-							<li><a href="resume.html">Resume</a></li>
-							<li><a href="contact.html">Contact</a></li>
-							<li><a href="sitemap.html">Sitemap</a></li>
-						</ul>
-						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/trent-leslie/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/trentleslie" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://genomic.social/@trent360" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
-							<li><a href="https://medium.com/@trentleslie" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-							<li><a href="https://www.instagram.com/uncle_robot_stuff/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<!-- Content -->
+						<p>
+							Welcome to Trent's personal website! Here, you'll find an overview of Trent's background, experiences, and projects, as well as discover his passion for data science, bioinformatics, machine learning, and data analytics. Feel free to explore the website and learn more about Trent's unique skill set and how he can contribute to the success of your organization.
+						</p>
 
-						</ul>
-					</nav>
+						
+						<figure>
+							<a class="image main">
+							<img src="images/rainier.jpg" alt="Mount Rainier, Washington, USA" />
+							</a>
+							<figcaption>
+							Photo by <a href="https://unsplash.com/@sita2" target="_blank">Andrew S</a> on <a href="https://unsplash.com" target="_blank">Unsplash</a>
+							</figcaption>
+						</figure>
 
-				<!-- Main -->
-					<div id="main">
+						<p>
+							Trent is an accomplished professional with a strong background in biology, project management, and data science. His expertise spans various industries, including bioinformatics, data analytics, and brewing. With a proven track record in project management, team leadership, and data-driven decision-making, Trent is well-equipped to tackle complex challenges in bioinformatics, machine learning, data science, and data analytics.
+						</p>
 
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+						<h1>Featured Projects</h1>
+					<!-- Posts -->
+						<section class="posts">
+							<article>
+								<header>
+									<h2><a href="#">RShiny Infrastructure for Urothelial Carcinoma Patient Data</a></h2>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+								<p> Trent developed an RShiny application to visualize and analyze clinical data and molecular profiles for urothelial carcinoma patients.</p>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="#" class="button">Full Story</a></li>
 								</ul>
 							</article>
+							<article>
+								<header>
+									<h2><a href="#">Primis eget<br />
+									imperdiet lorem</a></h2>
+								</header>
+								<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+								<ul class="actions special">
+									<li><a href="#" class="button">Full Story</a></li>
+								</ul>
+							</article>
+							<article>
+								<header>
+									<span class="date">April 18, 2017</span>
+									<h2><a href="#">Ante mattis<br />
+									interdum dolor</a></h2>
+								</header>
+								<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+								<ul class="actions special">
+									<li><a href="#" class="button">Full Story</a></li>
+								</ul>
+							</article>
+							<article>
+								<header>
+									<span class="date">April 18, 2017</span>
+									<h2><a href="#">Ante mattis<br />
+									interdum dolor</a></h2>
+								</header>
+								<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+								<ul class="actions special">
+									<li><a href="#" class="button">Full Story</a></li>
+								</ul>
+							</article>
+						</section>
 
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-							</section>
+						<h1>Quick Links to Sections</h1>
 
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
+						<ul>
+							<li><a href="about_me.html">About Me</a>: Learn more about Trent's background, education, and personal interests.</li>
+							<li>Career Experience: Explore Trent's professional journey and the diverse roles he has held in various industries.</li>
+							<li>Skills and Expertise: Discover Trent's extensive skill set in data analysis, machine learning, bioinformatics, and more.</li>
+							<li>Portfolio: Delve into Trent's featured projects, showcasing his ability to tackle complex challenges in data science and bioinformatics.</li>
+						</ul>
+				</div>
+
+			<!-- Footer -->
+				<footer id="footer">
+					<section>
+						<form method="post" action="https://formspree.io/f/xbjepydo">
+							<div class="fields">
+								<div class="field">
+									<label for="name">Your Name</label>
+									<input type="text" name="name" id="name" />
 								</div>
-							</footer>
-
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
+								<div class="field">
+									<label for="email">Your Email</label>
+									<input type="text" name="email" id="email" />
+								</div>
+								<div class="field">
+									<label for="message">Message</label>
+									<textarea name="message" id="message" rows="3"></textarea>
+								</div>
+							</div>
+							<ul class="actions">
+								<li><input type="submit" value="Send Message" /></li>
+							</ul>
+						</form>
+					</section>
+					<section class="split contact">
+						<section class="alt">
+							<h3>Location</h3>
+							<p><a href="https://goo.gl/maps/a1SJFuBMgYuEA8pK6" target="_blank">Port Orchard, Washington 98366</a></p>
+						</section>
 						<section>
-							<form method="post" action="https://formspree.io/f/xbjepydo">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Your Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Your Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
+							<h3>Phone</h3>
+							<p>(253) 353-2593</p>
 						</section>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Location</h3>
-								<p><a href="https://goo.gl/maps/a1SJFuBMgYuEA8pK6" target="_blank">Port Orchard, Washington 98366</a></p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p>(253) 353-2593</p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p>[first name + last name] at Gmail</p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/trent-leslie/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/trentleslie" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://genomic.social/@trent360" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
-									<li><a href="https://medium.com/@trentleslie" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-									<li><a href="https://www.instagram.com/uncle_robot_stuff/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								</ul>
-							</section>
+						<section>
+							<h3>Email</h3>
+							<p>[first name + last name] at Gmail</p>
 						</section>
-					</footer>
+						<section>
+							<h3>Social</h3>
+							<ul class="icons alt">
+								<li><a href="https://www.linkedin.com/in/trent-leslie/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/trentleslie" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://genomic.social/@trent360" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
+								<li><a href="https://medium.com/@trentleslie" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+								<li><a href="https://www.instagram.com/uncle_robot_stuff/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							</ul>
+						</section>
+					</section>
+				</footer>
 					
 				<!-- Copyright -->
 				<div id="copyright">
