bioinformatics and data science and ai/ml pages

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>TL Generic Page</title>
+		<title>TL Contact</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,6 +28,7 @@
 							<li><a href="about_me.html">About Me</a></li>
 							<li><a href="bioinformatics.html">Bioinformatics</a></li>
 							<li><a href="data_science.html">Data Science</a></li>
+							<li><a href="aiandml.html">AI & ML</a></li>
 							<li><a href="resume.html">Resume</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
