--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 						<li><a href="about_me.html">About Me</a></li>
 						<li><a href="bioinformatics.html">Bioinformatics</a></li>
 						<li><a href="data_science.html">Data Science</a></li>
+						<li><a href="aiandml.html">AI & ML</a></li>
 						<li><a href="resume.html">Resume</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
@@ -80,7 +81,7 @@
 
 					<!-- Content -->
 						<p>
-							Welcome to Trent's personal website! Here, you'll find an overview of Trent's background, experiences, and projects, as well as discover his passion for data science, bioinformatics, machine learning, and data analytics. Feel free to explore the website and learn more about Trent's unique skill set and how he can contribute to the success of your organization.
+							Welcome to Trent's personal website! Explore Trent's diverse expertise in data science, bioinformatics, machine learning, and data analytics. Learn about his background, experience, and projects, and see how his skills can benefit your organization. For hiring managers and recruiters, visit the specific pages on Bioinformatics, Data Science, or AI & ML to understand Trent's qualifications in these areas. To learn more about Trent's personal journey, visit the About Me page. For a comprehensive look at his professional experience, check out the Resume page. To get in touch with Trent, head to the Contact page.
 						</p>
 
 						
@@ -93,9 +94,9 @@
 							</figcaption>
 						</figure>
 
-						<p>
+						<!-- <p>
 							Trent is an accomplished professional with a strong background in biology, project management, and data science. His expertise spans various industries, including bioinformatics, data analytics, and brewing. With a proven track record in project management, team leadership, and data-driven decision-making, Trent is well-equipped to tackle complex challenges in bioinformatics, machine learning, data science, and data analytics.
-						</p>
+						</p> -->
 
 						<h1>Featured Projects</h1>
 					<!-- Posts -->
