--- a/about_me.html
+++ b/about_me.html
@@ -41,6 +41,7 @@
 							<li><a href="about_me.html">About Me</a></li>
 							<li><a href="bioinformatics.html">Bioinformatics</a></li>
 							<li><a href="data_science.html">Data Science</a></li>
+							<li><a href="aiandml.html">AI & ML</a></li>
 							<li><a href="resume.html">Resume</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
