chatgpt eval addition

--- a/about_me.html
+++ b/about_me.html
@@ -133,8 +133,8 @@
 									</h3>
 										<div class="box">
 											<ul>
-												<li>Data Science Certificate - Springboard (Online), 2021</li>
-												<li>Six Sigma Black Belt Certification - Xavier Leadership Center, Cincinnati, OH</li>
+												<li><a target="_blank" href="https://www.springboard.com/courses/data-science-career-track/">Data Science Certificate</a> - Springboard (Online), 2021</li>
+												<li>Six Sigma Black Belt Certification - <a target="_blank" href="https://xavierleadershipcenter.com/">Xavier Leadership Center</a>, Cincinnati, OH</li>
 											</ul>
 										</div>
 
