--- a/data_science.html
+++ b/data_science.html
@@ -92,7 +92,7 @@
 							<h1>
 								Data Science Projects
 							</h1>
-							<section class="posts">
+							<section id="projects" class="posts">
 								<article>
 									<header>
 										<h2><a target="_blank" href="https://github.com/trentleslie/springboard_final_capstone/blob/main/reports/Capstone%20Three%20-%20Final%20Report%20-%20Trent%20Leslie.pdf">LSTM Neural Network Candlestick Forecasting for Short-term Trading Opportunities</a></h2>
