--- a/aiandml.html
+++ b/aiandml.html
@@ -109,7 +109,7 @@
 									<header>
 										<h2><a target="_blank" href="https://medium.com/@trentleslie/the-ultimate-guide-to-creating-a-simple-email-summarizer-with-gmail-api-and-openai-chatgpt-api-37cedf847b23">The Ultimate Guide to Creating a Simple Email Summarizer with Gmail API and ChatGPT API</a></h2>
 									</header>
-									<a target="_blank" href="https://medium.com/@trentleslie/the-ultimate-guide-to-creating-a-simple-email-summarizer-with-gmail-api-and-openai-chatgpt-api-37cedf847b23" class="image fit"><img src="images/chatgpteval.png" alt="" /></a>
+									<a target="_blank" href="https://medium.com/@trentleslie/the-ultimate-guide-to-creating-a-simple-email-summarizer-with-gmail-api-and-openai-chatgpt-api-37cedf847b23" class="image fit"><img src="images/aiandml2.png" alt="" /></a>
 									<p>A demonstration on how to create an email summarizer that fetches unread emails using the Gmail API and generates summaries with the ChatGPT API, helping you stay on top of your inbox.</p>
 									<ul class="actions special">
 										<li><a target="_blank" href="https://medium.com/@trentleslie/the-ultimate-guide-to-creating-a-simple-email-summarizer-with-gmail-api-and-openai-chatgpt-api-37cedf847b23" class="button">Full Report</a></li>
