--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<!-- Intro -->
 				<div id="intro">
 					<h1>Trent A. Leslie</h1>
-					<p><b>Data analytics professional with over a decade of experience, proficient in harnessing statistical techniques and visual representations to disclose valuable insights and empower informed decision-making.</b></p>
+					<p><b>Versatile and Impact-Driven Data Analytics Expert: Harnessing Bioinformatics, Machine Learning, and Leadership Skills to Drive Innovation and Success in Teams and Organizations.</b></p>
 					<ul class="actions">
 						<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 					</ul>
