quick update on project title

--- a/aiandml.html
+++ b/aiandml.html
@@ -102,12 +102,9 @@
 										<li><a target="_blank" href="https://medium.com/@trentleslie/completing-a-chatgpt-eval-for-submission-to-openai-a-step-by-step-guide-35d6c5005841" class="button">Full Report</a></li>
 									</ul>
 								</article>
-							</section>
-
-							<section id="projects" class="posts">
 								<article>
 									<header>
-										<h2><a target="_blank" href="https://medium.com/@trentleslie/the-ultimate-guide-to-creating-a-simple-email-summarizer-with-gmail-api-and-openai-chatgpt-api-37cedf847b23">The Ultimate Guide to Creating a Simple Email Summarizer with Gmail API and ChatGPT API</a></h2>
+										<h2><a target="_blank" href="https://medium.com/@trentleslie/the-ultimate-guide-to-creating-a-simple-email-summarizer-with-gmail-api-and-openai-chatgpt-api-37cedf847b23">Email Summarizer with Gmail API and ChatGPT API</a></h2>
 									</header>
 									<a target="_blank" href="https://medium.com/@trentleslie/the-ultimate-guide-to-creating-a-simple-email-summarizer-with-gmail-api-and-openai-chatgpt-api-37cedf847b23" class="image fit"><img src="images/aiandml2.png" alt="" /></a>
 									<p>A demonstration on how to create an email summarizer that fetches unread emails using the Gmail API and generates summaries with the ChatGPT API, helping you stay on top of your inbox.</p>
