adding vrppd project

--- a/data_science.html
+++ b/data_science.html
@@ -103,6 +103,16 @@
 										<li><a target="_blank" href="https://github.com/trentleslie/springboard_final_capstone/blob/main/reports/Capstone%20Three%20-%20Final%20Report%20-%20Trent%20Leslie.pdf" class="button">Full Report</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<h2><a target="_blank" href="https://medium.com/@trentleslie/leveraging-the-vehicle-route-problem-with-pickup-and-dropoff-vrppd-for-optimized-beer-delivery-in-392117d69033">Optimized Beer Distribution: A Data Science Approach with VRPy and Streamlit</a></h2>
+									</header>
+									<a target="_blank" href="https://medium.com/@trentleslie/leveraging-the-vehicle-route-problem-with-pickup-and-dropoff-vrppd-for-optimized-beer-delivery-in-392117d69033" class="image fit"><img src="images/datascience2.png" alt="" /></a>
+									<p>This innovative project utilizes data science methodologies, including route optimization algorithms and data analysis, to enhance the efficiency of beer distribution from a depot to various retail locations. By integrating CSV data input, Google Maps API, and the Vehicle Routing Problem with Pick-up and Delivery (VRPPD) solution, it streamlines route optimization and load management.</p>
+									<ul class="actions special">
+										<li><a target="_blank" href="https://medium.com/@trentleslie/leveraging-the-vehicle-route-problem-with-pickup-and-dropoff-vrppd-for-optimized-beer-delivery-in-392117d69033" class="button">Full Report</a></li>
+									</ul>
+								</article>
 							</section>
 							
 							<p class="centered-text">
